[+] Fixed align-button

--- a/src/App.css
+++ b/src/App.css
@@ -146,11 +146,12 @@
   display: inline-flex;
   border-radius: 100%;
   color: var(--geist-background);
-  height: 40px;
+  height: 50px;
   opacity: 0.9;
 }
 
 .button-get {
+  /* list-style-type: none; */
   z-index: 100;
   box-sizing: border-box;
   display: flex;
@@ -165,6 +166,7 @@
 }
 
 .flex {
+  list-style:none ;
   z-index: 100;
   display: flex;
   justify-content: space-around;
